2003-08-06  Rolf Ade  <rolf@pointsman.de>

        * tests/all.tcl
        * tests/domCmd.test: Added contraint need_uri, so that the few
          tests, which needs the tcllib uri package are skipped, if
          the uri package isn't present.

2003-07-06  Rolf Ade  <rolf@pointsman.de>

        * generic/tclexpat.c: Fixed bug in the subtree skipping
          feature of event handlers. Should be merged with HEAD.

        * lib/tdom.tcl: Fixed error reporting in tDOM::extRefHandler.   

        --- Backported fixes from HEAD ---

        * generic/domxslt.c: Fixed a bug in xsl:number. If there is no
          'count' attribute given to xsl:number, it must default to
          the pattern that matches any node with the same node type as
          the current node and, if the current node has an
          expanded-name, with the same expanded-name as the current
          node. But in case of PROCESSING_INSTRUCTION_NODEs as the
          current node and no 'count' attribute, it counted all pi's
          regardless of the name. Now, the name is respected, as it
          should be.

        * generic/tcldom.c: Added an argument check for XSLTCmds.

2003-07-03  Zoran Vasiljevic  <zoran@archiware.com>

	---- Changes done in rel-0-7-branch ----
	---- Those should be merged in HEAD ----

	* README
	* README.AOL
	* configure
	* configure-tcl8.0.5
	* configure.in
	* apps/xslt.tcl
	* extensions/tnc/tnc.c
	* generic/tcldom.c
	* mac/Prefix/tDOMPrefix.h
	* mac/Prefix/tDOMPrefix_OSX.h
	* mac/tDOM/pkgIndex.tcl
	* tests/loadtdom.tcl: bumped version string to 0.7.8
	* generic/domlock.c: fixed double mutex unlock.

	* generic/tcldom.c: allows same thread to issue several
	  "attachDocument" commands to artificially bump the 
          document refcount thus making the document sticky.
	  
	  Also, fixed variable tracing issues when tearing down the
	  dom document. Now, all node object command variables are
	  automatically untraced. This prevents memory trashing when