@@ -1,3 +1,9 @@
+2003-08-06  Zoran Vasiljevic  <zoran@archiware.com>
+
+	* generic/nodecmd.c: removed optimized domAppendChild1 in favour
+	  of generic domAppendChild since former was trashing memory
+	  in certain situations.
+
 2003-08-06  Rolf Ade  <rolf@pointsman.de>
 
         * tests/all.tcl
